codepkg/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>X2nd_Dose_plan_detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>2nd Dose plan detail?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2nd_Dose_plan_in_place__c</fullName>
        <label>2nd Dose plan in place?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X429_Form__c</fullName>
        <label>429 Form</label>
        <summarizedField>Resource_Request_Question_Answer__c.Rating_Score__c</summarizedField>
        <summaryForeignKey>Resource_Request_Question_Answer__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Incident_Name__c</columns>
        <columns>Requestor_Agency_Text__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Order_Source__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order__c.PHOS</value>
        </filters>
        <label>All Orders - PHOS</label>
    </listViews>
    <listViews>
        <fullName>All_Denied_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled / Denied</value>
        </filters>
        <label>All Denied Orders</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <group>Resource_Request_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Fulfilled_Orders</fullName>
        <columns>NAME</columns>
        <columns>Incident_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fulfilled - Closed</value>
        </filters>
        <label>All Fulfilled Orders</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <group>Resource_Request_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Orders</fullName>
        <columns>NAME</columns>
        <columns>Other_Request_Number_If_Applicable__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Requestor_Agency_Text__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders w/ Other Request #</label>
    </listViews>
    <listViews>
        <fullName>All_Partially_Fulfilled_Orders</fullName>
        <columns>NAME</columns>
        <columns>Incident_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Partially Fulfilled - Closed</value>
        </filters>
        <label>All Partially Fulfilled Orders</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <group>Resource_Request_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unfulfilled_Orders</fullName>
        <columns>NAME</columns>
        <columns>Incident_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Unfulfilled - Closed</value>
        </filters>
        <label>All Unfulfilled Orders</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <group>Resource_Request_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BPP_All_Orders</fullName>
        <columns>NAME</columns>
        <columns>Incident_Name__c</columns>
        <columns>Requestor_Agency_Text__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order__c.Bulk_Procurement</value>
        </filters>
        <label>BPP - All Orders</label>
        <sharedTo>
            <group>Bulk_Procurement_Process</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CDPH_Pharmacy_Consultant_Review_Queue</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Allocation Review,CDPH Pharmacy Consultant Review</value>
        </filters>
        <label>CDPH Pharmacy Consultant Review Queue</label>
        <sharedTo>
            <group>Resource_Request_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CDPH_Resource_Analyst_Review_Queue</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CDPH Resource Analyst Review</value>
        </filters>
        <label>CDPH Resource Analyst Review Queue</label>
        <sharedTo>
            <group>Resource_Request_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CDPH_Resource_Request_Supervisor_Queue</fullName>
        <columns>NAME</columns>
        <columns>Incident_Name__c</columns>
        <columns>Priority_for_Requests__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CDPH Resource Request Supervisor Review</value>
        </filters>
        <label>CDPH Resource Request Supervisor Queue</label>
        <sharedTo>
            <group>Resource_Request_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JOECUser_23_Active_Queue</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Incident_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CDPH Resource Analyst Review,CDPH Pharmacy Consultant Review,Analyst Final Review</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>j23</value>
        </filters>
        <label>JOECUser 23 Active Queue</label>
    </listViews>
    <listViews>
        <fullName>MAC_Group_Review_Orders</fullName>
        <columns>NAME</columns>
        <columns>Incident_Name__c</columns>
        <columns>County__c</columns>
        <columns>Requestor_Agency_Text__c</columns>
        <columns>Personnel__c</columns>
        <columns>Status__c</columns>
        <columns>X429_Form__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order__c.PHOS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CDPH Pharmacy Consultant Review</value>
        </filters>
        <label>MAC Group Review Orders</label>
    </listViews>
    <listViews>
        <fullName>My_Orders</fullName>
        <columns>NAME</columns>
        <columns>Incident_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Orders</label>
    </listViews>
    <listViews>
        <fullName>My_Orders_Need_Action</fullName>
        <columns>NAME</columns>
        <columns>Incident_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled / Denied,Cancelled</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>j15</value>
        </filters>
        <label>My Orders - Need Action</label>
    </listViews>
    <listViews>
        <fullName>Orders_Analyst_Final_Review</fullName>
        <columns>NAME</columns>
        <columns>Incident_Name__c</columns>
        <columns>Requestor_Agency_Text__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Analyst Final Review</value>
        </filters>
        <label>Orders - Analyst Final Review</label>
    </listViews>
    <nameField>
        <displayFormat>CASF-{00000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>Bulk_Procurement</fullName>
        <active>true</active>
        <label>Bulk Procurement</label>
    </recordTypes>
    <recordTypes>
        <fullName>PHOS</fullName>
        <active>true</active>
        <label>PHOS</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Order_Apex_Sharing__c</fullName>
        <label>Order Apex Sharing</label>
    </sharingReasons>
</CustomObject>